# Drawing1.step

./: CMakeLists.txt  DetectorConstruction.cc  Drawing1.dae  Drawing1.step  Drawing1.stl  Drawing2.stl  Drawing2_ascii.stl  Drawing2_cleaned.stl  basic.cc  external.cc
